--- a/pages/index/musicLibrary/musicLibrary.wxss
+++ b/pages/index/musicLibrary/musicLibrary.wxss
@@ -1,13 +1,31 @@
 /* pages/index/musicLibrary/musicLibrary.wxss */
 .banner{
   margin: 30rpx 35rpx 0 35rpx;
-  border-radius: 10rpx;
+  border-radius: 12rpx;
 }
 .slide-image{
   width: 100%
 }
 .main_page{
-  background: radial-gradient(at 0 0, #2f6ca9, #adadad);
+  /* background: radial-gradient(at 0 0, #2f6ca9, #adadad); */
   margin: 35rpx 35rpx 0 35rpx;
   height: 2000rpx;
+}
+.top_button{
+  display: flex;
+  justify-content:space-around;
+  padding-top: 14rpx
+}
+.top_but_nav{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  font-size: 20rpx;
+  width: 100rpx;
+}
+.top_but_nav_img{
+  height: 60rpx;
+  width: 60rpx;
+  margin: 0 auto;
+  margin-bottom: 6rpx
 }
