--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,9 @@
 <!--index.wxml-->
 <view class="container" >
   <view class="search_contain" style="opacity:{{1-(raiseTop/160)}}">
-    <button class="search_but"><image src="/static/icons/search.svg" class='search_ico'/>搜索</button>
+    <button class="search_but" bind:tap='showSearch'><image src="/static/icons/search.svg" class='search_ico'/>Illinois Sufjan Stevens</button>
   </view>
+  <search-page wx:if="{{ifShowSearch}}" catchtouchmove="ture" bind:closeSearch='closeSearch'></search-page>
   <nav-menu class='nav_menu' nav-data='{{navData}}' bind:scollMain="handleScoll" style='position:relative;top:-{{raiseTop/2}}rpx'>
     <view slot="music">
       <music-library></music-library>
