--- a/pages/music/music.wxss
+++ b/pages/music/music.wxss
@@ -1,5 +1,88 @@
 /* pages/music/music.wxss */
+.mainPlayer{
+  position: relative;
+}
+.player{
+  display: flex
+}
+.background{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  filter: blur(15rpx);
+}
+.backgroundImg{
+  height: 100%;
+  width: 100%;
+  
+}
+.backMask{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: rgba(255, 255, 255,.8)
+}
 .mainPic{
   width: 100vw;
   height: 100vw;
+}
+.musicName{
+  text-align: center;
+  font-size: 35rpx;
+  color: rgb(124, 124, 124);
+  margin-top: 22rpx;
+}
+.musicAuthor{
+  text-align: center;
+  font-size: 27rpx;
+  color: rgb(175, 175, 175);
+  margin-top: 7rpx
+}
+.buttonGroup{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.lessBut{
+  margin-top: 20rpx;
+  padding: 0 180rpx
+}
+.mainBut{
+  margin-top: 40rpx;
+  padding: 0 60rpx
+}
+.musicButton{
+  height: 40rpx;
+  width: 40rpx;
+}
+.mainMusicBut{
+  height: 70rpx;
+  width: 70rpx;
+}
+.playBut{
+  height: 100rpx;
+  width: 100rpx;
+}
+/*进度条部分*/
+.dragContain{
+  width: 100%;
+  height: 0;
+  position: absolute;
+  top: 100vw;
+  margin-top: -20rpx
+}
+.dragSon{
+  height: 40rpx;
+  width: 120rpx;
+  line-height: 40rpx;
+  margin-bottom: 15rpx;
+  background: rgba(0, 0, 0, 0.7);
+  font-size: 25rpx;
+  color: #fff;
+  text-align: center;
+  padding: 0 20rpx;
+  border-radius: 20rpx;
+  box-shadow: 5rpx 5rpx 20rpx rgb(133, 133, 133)
 }
