--- a/pages/index/musicLibrary/musicLibrary.wxml
+++ b/pages/index/musicLibrary/musicLibrary.wxml
@@ -5,7 +5,7 @@
       autoplay="{{true}}" style='height:230rpx' circular='{{true}}' indicator-active-color="rgba(255,255,255,.9)" indicator-color='rgba(255,255,255,.4)'>
       <block wx:for="{{imgUrls}}" wx:key='index'>
         <swiper-item>
-          <image src="{{item}}" class="slide-image"/>
+          <image src="{{item}}" class="slide-image" mode='aspectFill'/>
         </swiper-item>
       </block>
     </swiper>
