--- a/pages/music/music.wxss
+++ b/pages/music/music.wxss
@@ -3,7 +3,8 @@
   position: relative;
 }
 .player{
-  display: flex
+  display: flex;
+  position: relative;
 }
 .background{
   position: absolute;
@@ -50,7 +51,7 @@
   padding: 0 180rpx
 }
 .mainBut{
-  margin-top: 40rpx;
+  margin-top:25rpx;
   padding: 0 60rpx
 }
 .musicButton{
@@ -85,4 +86,40 @@
   padding: 0 20rpx;
   border-radius: 20rpx;
   box-shadow: 5rpx 5rpx 20rpx rgb(133, 133, 133)
+}
+.upPage{
+  position: absolute;
+  width: 100%;
+  box-shadow: 0 0 5px #999;
+  background: #fff;
+}
+.downPage{
+  position: absolute;
+  width: 100%;
+  height:80px;
+  box-shadow: 0 0 5px #999;
+  background: rgba(255, 255, 255, 0.9);
+  display: flex;
+}
+.downButtonGroup{
+  flex-grow: 1;
+  padding: 0 80rpx
+}
+.littleCover{
+  height: 80px;
+  width: 80px
+}
+.commet_close{
+  height: 70rpx;
+  width: 70rpx;
+}
+.closeOut{
+  z-index: 9;
+  height: 70rpx;
+  width: 70rpx;
+  position: absolute;
+  right: 30rpx;
+  top: 30rpx;
+  background: rgb(240, 240, 240);
+  border-radius: 50%
 }
