--- a/pages/music/music.wxml
+++ b/pages/music/music.wxml
@@ -2,17 +2,17 @@
 <view class="player" >
   <view class="background" >
     <view class="backMask"></view>
-    <image class="backgroundImg" src="{{imgPic}}" mode='aspectFill'/>
+    <image class="backgroundImg" src="{{nowSongInfo.imgPic}}" mode='aspectFill'/>
   </view>
   <view class="mainPlayer" >
-    <image src="{{imgPic}}" class='mainPic' bind:touchmove="onShowCommit" bind:touchstart="onCommitStart" bind:touchend="onCommitEnd"/>
+    <image src="{{nowSongInfo.imgPic}}" class='mainPic' bind:touchmove="onShowCommit" bind:touchstart="onCommitStart" bind:touchend="onCommitEnd"/>
     <movable-area class='dragContain'>
       <movable-view  class='dragSon' direction="horizontal" bind:touchstart='stopProcessNow' bind:change='changeProgressBar' x='{{processX}}'  bind:touchend='playProcessNow'>
         {{nowTime}}/{{totalTime}}
       </movable-view>
     </movable-area>
-    <view class='musicName'>{{musicName}}</view>
-    <view class="musicAuthor">{{musicAuthor}}</view>
+    <view class='musicName'>{{nowSongInfo.musicName}}</view>
+    <view class="musicAuthor">{{nowSongInfo.musicAuthor}}</view>
     <view class="buttonGroup lessBut">
       <image bind:tap="likeIt" class="musicButton" src="/static/icons/music/{{ifLike?'like':'dislike'}}.svg"/>
       <image class="musicButton" src="/static/icons/music/download.svg"/>
@@ -21,27 +21,37 @@
     </view>
     <view class="buttonGroup mainBut">
       <image bind:tap="changeCircle" class="musicButton" src="/static/icons/music/{{circleWay[circleIndex]}}.svg"/>
-      <image class="mainMusicBut" src="/static/icons/music/lastone.svg"/>
+      <image bind:tap="lastSong" class="mainMusicBut" src="/static/icons/music/lastone.svg"/>
       <image bind:tap="playMusic" class="playBut" src="/static/icons/music/{{ifPlay?'stop':'play'}}.svg"/>
-      <image class="mainMusicBut" src="/static/icons/music/next.svg"/>
-      <image class="musicButton" src="/static/icons/music/list.svg"/>
+      <image bind:tap="nextSong" class="mainMusicBut" src="/static/icons/music/next.svg"/>
+      <image bind:tap="showList" class="musicButton" src="/static/icons/music/list.svg"/>
     </view>
   </view>
   <view class="downPage" style='top:{{(80-upTop)*80/(deviceHeight)}}px;opacity:{{1+(80-upTop)*80/(deviceHeight*67)}};{{!ifmove?"transition: all .5s":""}}'>
-    <image src="{{imgPic}}" class='littleCover'/>
+    <image src="{{nowSongInfo.imgPic}}" class='littleCover'/>
     <view class="buttonGroup downButtonGroup">
       <image bind:tap="likeIt" class="musicButton" src="/static/icons/music/{{ifLike?'like':'dislike'}}.svg"/>
       <image bind:tap="playMusic" class="playBut" src="/static/icons/music/{{ifPlay?'stop':'play'}}.svg"/>
-      <image class="mainMusicBut" src="/static/icons/music/next.svg"/>
+      <image bind:tap="nextSong" class="mainMusicBut" src="/static/icons/music/next.svg"/>
       <image class="musicButton" src="/static/icons/music/more.svg"/>
     </view>
   </view>
+  <scroll-view class="songList" style="top: {{ifShowList?0:-100}}vw">
+    <view wx:for="{{musicList}}" wx:key="{{index}}" class="listItem {{index==nowSongIndex?'choosenList':''}}" data-index='{{index}}' bind:tap="chooseSong">
+      <view class='listImg'>
+        <image src="{{item.imgPic}}" />
+      </view>
+      <view >
+        <view class='listname'>{{item.musicName}}</view>
+        <view class='listauthor'>{{item.musicAuthor}}</view>
+      </view>
+    </view>
+  </scroll-view>
   <view class="upPage" 
     style='height:{{deviceHeight-80}}px;top:{{upTop}}px;{{!ifmove?"transition: all .5s":""}}' >
     <view bind:tap="closeCommet" class="closeOut" >
       <image src="/static/icons/down.svg" class='commet_close' ></image>
     </view>
-    
     <commet-page></commet-page>
   </view>
 </view>
